--- a/real-time-etl/src/pinot/gps_data_realtime_table_config.json
+++ b/real-time-etl/src/pinot/gps_data_realtime_table_config.json
@@ -12,9 +12,9 @@
     "loadMode": "MMAP",
     "streamConfigs": {
       "streamType": "kafka",
-      "stream.kafka.broker.list": "kafka:9092",
+      "stream.kafka.broker.list": "kafka:29092",
       "stream.kafka.consumer.type": "lowlevel",
-      "stream.kafka.topic.name": "wikipedia-events",
+      "stream.kafka.topic.name": "taxi_gps_stream",
       "stream.kafka.decoder.prop.format": "JSON",
       "stream.kafka.consumer.factory.class.name": "org.apache.pinot.plugin.stream.kafka20.KafkaConsumerFactory",
       "stream.kafka.decoder.class.name": "org.apache.pinot.plugin.stream.kafka.KafkaJSONMessageDecoder",
@@ -25,33 +25,6 @@
   "quota": {},
   "routing": {},
   "query": {},
-  "ingestionConfig": {
-    "transformConfigs": [
-      {
-        "columnName": "metaJson",
-        "transformFunction": "JSONFORMAT(meta)"
-      },
-      {
-        "columnName": "timestamp",
-        "transformFunction": "JSONPATH(metaJson, '$.timestamp')"
-      },
-      {
-        "columnName": "lat",
-        "transformFunction": "JSONPATH(metaJson, '$.lat')"
-      },
-      {
-        "columnName": "lon",
-        "transformFunction": "JSONPATH(metaJson, '$.lon')"
-      },
-      {
-        "columnName": "fare_amount",
-        "transformFunction": "JSONPATH(metaJson, '$.fare_amount')"
-      },
-      {
-        "columnName": "tip_amount",
-        "transformFunction": "JSONPATH(metaJson, '$.tip_amount')"
-      }
-    ]
-  },
+  "ingestionConfig": {},
   "isDimTable": false
 }
