--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     environment:
       KAFKA_NODE_ID: 1
       KAFKA_PROCESS_ROLES: broker,controller
-      KAFKA_LISTENERS: INTERNAL://kafka:29092,CONTROLLER://kafka:29093, EXTERNAL://localhost:9092
+      KAFKA_LISTENERS: INTERNAL://kafka:29092,CONTROLLER://kafka:29093, EXTERNAL://0.0.0.0:9092
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:29092,EXTERNAL://localhost:9092
       KAFKA_INTER_BROKER_LISTENER_NAME: EXTERNAL
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
@@ -112,7 +112,7 @@ services:
     container_name: "pinot-controller"
     hostname: pinot-controller
     volumes:
-      - ./scripts:/scripts
+      - ./real-time-etl/src/pinot:/scripts
     restart: unless-stopped
     ports:
       - "9000:9000"
